# jira-notify-bot

./: .ruff.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  client_voice.py  exploitation.py  monitor.py  support.py  suzi.py  wildberries.py
src/client/: __init__.py  mattermost.py
src/core/: constants.py  filters.py  logger.py  route_class.py
src/core/config/: __init__.py
src/core/exceptions/: __init__.py  handlers.py  schemas.py
src/schemas/: __init__.py  base_mixin.py  client_voice.py  ex_project.py  mattermost.py  monitor_project.py  support_project.py  suzi_project.py  wb_project.py
src/service/: monitor_text_builder.py
src/utils/: __init__.py  custom_types.py  formatted_str.py  http_client.py  make_response.py
tests/service/: test_monitor_text_builder.py
